Этап 2 (выполнен)